--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <a href="index.html" class="button2">Home</a>
         <a href="{{ url_for('signup') }}" class="button2">Signup</a>
         <a href="{{ url_for('about') }}" class="button2" >About</a>
-        <a href="signin.html" class="button2">Sign in</a>
+        <a href="{{ url_for('chickens')}}" class="button2">Chicken Info</a>
         <input type="text" id="Search">
       </section>
       {%block content%}
@@ -19,7 +19,7 @@
     <br />
     <br />
     <br />
-    <div class="sign_up_box"></div>
+    
     
       
       <script scr="{{ url_for('static', filename='js/index.js')}}"></script>
