--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="bar">
-        <a href="index.html" class="button2">Home</a>
+        <a href="{{ url_for('home')}}" class="button2">Home</a>
         <a href="{{ url_for('signup') }}" class="button2">Signup</a>
         <a href="{{ url_for('about') }}" class="button2" >About</a>
         <a href="{{ url_for('chickens')}}" class="button2">Chicken Info</a>
