Added a background image to index.html.

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body>
+<body class="background">
     <br />
     <br />
     <br />
