--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 html {
     font-family: Arial;
-    background-color: #DFEBF2;
+    /*#DFEBF2*/
+    background-image: url('../images/4518.webp');
+    background-size: cover;
+    background-attachment: fixed;
 }
   .bar {
     background-color: black;
@@ -55,9 +58,10 @@ html {
     src: url('fonts/Allura-Regular.ttf') format('truetype'); 
   }
   
-  #MyFlockFont {
+  .MyFlockFont {
     font-family: 'Arial';
     text-align: center;
+    color: white;
   }
   #sign_up_text {
     font-family: Arial;
@@ -69,5 +73,4 @@ html {
       height: 600px;
       background: black;
       margin: 0 auto;
-      
   }
