--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {%block content%}
-<h1 class="MyFlockFont">Welcome to MyFlock</h1>
+<br />
+<br />
+<h1 class="MyFlockFont">Welcome to MyFlock</h1> //Fix 
 {%endblock%}
