--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {%block content%}
+<body class="home_bg">
 <br />
 <br />
-<h1 class="MyFlockFont">Welcome to MyFlock</h1> //Fix 
+</body>
 {%endblock%}
