--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,13 +6,15 @@
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body class="background">
+<body class="other_bg">
     <br />
     <br />
     <br />
     <br />
     <br />
-    <div class="sign_up_box"><h1 class="sign_up_text">Sign up</h1></div>
+    <section class="sign_up_box">
+        <div class="sign_up_image" css="left:50%"></div>    
+    </section>
 
 
     <script scr="{{ url_for('static', filename='js/index.js')}}"></script>
