--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -13,7 +13,7 @@
     <br />
     <br />
     <section class="sign_up_box">
-        <div class="sign_up_image" css="left:50%"></div>    
+        <div class="sign_up_image"> </div>    
     </section>
 
 
