--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -13,7 +13,19 @@
     <br />
     <br />
     <section class="sign_up_box">
-        <div class="sign_up_image"> </div>    
+        <h1>Sign Up</h1>
+        <form action="{{ url_for("signup")}}" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        {% if error %}
+        <p class="error">{{ error }}</p>
+        {% endif %}
     </section>
 
 
