--- a/templates/error_page.html
+++ b/templates/error_page.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {%block content%}
-<h1>An error has occured.</h1>
+<title>MyFlock</title>
+<h1>An error has occurred.</h1>
 <p>We apologize for the inconvenience. Please try again later. This error can be reported at our GitHub page,</p> <p href="https://github.com/NiamhDriscoll/MyFlock-0.9">here.</p>
 {%endblock%}
