--- a/templates/form.html
+++ b/templates/form.html
@@ -19,7 +19,7 @@
     <br />
     <br />
     <br />
-    <section class="sign_up_box">
+    <section class="sign_up_box" style="color: white;">
         {%block content%}
         {%endblock%}
     </section>
